# desktop-assistant

./: .gitignore  AGENTS.md  MVP1 Desktop Assistant Plan v2 (Question-Locked Replacement).md  README.md
.github/workflows/: ci.yml  live-ai-nightly.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  storage.py
backend/app/services/: chat_agent.py  emotion.py  image_jobs.py  memory_service.py  openclaw_bridge.py  settings_service.py  xai_image_client.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_integration_api.py
backend/app/tests/live/: test_live_ai_contracts.py
backend/app/tests/smoke/: test_smoke_api.py
backend/app/tests/unit/: test_chat_agent.py  test_emotion.py  test_image_jobs.py  test_memory_service.py  test_openclaw_bridge.py  test_prompt_builder.py  test_xai_image_client.py
config/secrets/: README.md
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: enable_openclaw_responses.py  launch-desktop.ps1  launch-desktop.sh  probe_providers.py  probe_xai_edits.py  stop-desktop.ps1  stop-desktop.sh  test_all_endpoints.py
skills/commit-and-push/: SKILL.md
